# patient-interaction-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TECHNICAL_CONCEPT.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: interactions.py  outcomes.py  patients.py
app/core/: config.py  database.py
app/models/: __init__.py  interaction.py  outcome.py  patient.py
app/schemas/: interaction.py  patient.py
tests/: conftest.py  test_interactions.py  test_search.py
