[tool.poetry]
name = "healthtech-innovators-task"
packages = [{include = "app"}]
version = "0.1.0"
description = "Patient Documentation System"
authors = ["Vladimir Orlinski <vladimir@orlin.ski>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
starlette = "^0.49.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.0"
ruff = "^0.9.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

[tool.mypy]
strict = true
